# sam-fd

./: .gitignore  README.md  mcu.kicad_sch  sam-fd.kicad_sch  sam-fd.kicad_sym  sym-lib-table  usb.kicad_sch
.github/workflows/: flasher.yml
hardware/: can.kicad_sch  fp-info-cache  mcu.kicad_sch  sam-fd-rounded.kicad_pcb  sam-fd-rounded.kicad_prl  sam-fd.csv  sam-fd.kicad_pcb  sam-fd.kicad_prl  sam-fd.kicad_pro  sam-fd.kicad_sch  sam-fd.kicad_sym  sam-fd.xml  usb.kicad_sch
hardware/sam-fd.pretty/: CastellatedHoles_1x03_P2.54mm.kicad_mod  PinHeader_2x05_P1.27mm_Vertical.kicad_mod  USB_Micro-B_Molex_47346-0001.kicad_mod
rev1/: fp-info-cache  fp-lib-table  mcu.kicad_sch  sam-fd-rounded.kicad_pro  sam-fd.csv  sam-fd.kicad_pcb  sam-fd.kicad_prl  sam-fd.kicad_pro  sam-fd.kicad_sch
rev1/sam-fd.pretty/: CastellatedHoles_1x04_P2.54mm.kicad_mod
rev2/: can.kicad_sch  mcu.kicad_sch  sam-fd.kicad_prl  sam-fd.kicad_pro  sam-fd.kicad_sch  sam-fd.kicad_sym  sym-lib-table  usb.kicad_sch
software/: atmel_start_config.atstart  atmel_start_pins.h  driver_init.c  flash.cfg  main.c  software.code-workspace
software/application/: AtmelStart.env_conf  AtmelStart.gpdsc  CMakeLists.txt  atmel_start_config.atstart  driver_init.c  driver_init.h  flash.cfg  led.c  led.h  main.c  toolchain.cmake
software/application/armcc/: Makefile
software/application/config/: hpl_sercom_config.h
software/application/examples/: driver_examples.c  driver_examples.h
software/application/gcc/: Makefile
software/application/samc21/gcc/gcc/: samc21e16a_flash.ld
software/baremetal/: CMakeLists.txt  Doxyfile  Doxyfile.in  link.ld  toolchain.cmake
software/baremetal/inc/: gclk.h  gclk.hpp  linked.h  linked.hpp  main.h  mclk.h  mclk.hpp  nvic.h  nvmctrl.h  optional.hpp  oscctrl.h  port.h  port.hpp  samfd.hpp  sercom.h  syst.h  system.h  system.hpp  types.hpp  uart.h
software/baremetal/inc/drv/: flash.h  uart.h
software/baremetal/inc/reg/: can.h  dsu.h  gclk.h  mclk.h  nvic.h  nvmctrl.h  oscctrl.h  pac.h  port.h  scb.h  sercom.h  syst.h
software/baremetal/src/: can.c  flash.c  gclk.cpp  main.c  mclk.cpp  optional.cpp  port.cpp  samfd.cpp  system.c  system.cpp  uart.c
software/bootloader/: AtmelStart.gpdsc  CMakeLists.txt  atmel_start_config.atstart  atmel_start_pins.h  driver_init.c  driver_init.h  main.c  openocd.cfg  protocol.h
software/bootloader/armcc/: Makefile
software/bootloader/config/: hpl_oscctrl_config.h  hpl_sercom_config.h  peripheral_clk_config.h
software/bootloader/examples/: driver_examples.c  driver_examples.h
software/bootloader/gcc/: Makefile
software/bootloader/samc21/gcc/gcc/: samc21e16a_flash.ld
software/config/: hpl_can_config.h  hpl_gclk_config.h  hpl_oscctrl_config.h  hpl_sercom_config.h  peripheral_clk_config.h
software/examples/: driver_examples.c  driver_examples.h
software/flasher/: CMakeLists.txt  Makefile  crc.c  crc.h  flasher.c  protocol.h  serial.h  serial_unix.c  serial_windows.c
software/gcc/: Makefile
software/shared/inc/drv/: can.h  flash.h  uart.h
software/shared/inc/reg/: can.h  port.h  sercom.h
software/shared/src/drv/: flash.c  uart.c
